2004-04-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exulticon.h, exult.cc: set a window icon

2004-04-15    <jeff@mini.nerble.net>

	* actors.cc (Npc_actor): Removed code to set initial schedules in
	BG, since it sometimes caused former companions to wander off even
	when you told them to "Wait here".

2004-04-10    <jeff@mini.nerble.net>

	* cheat_screen.cc: Implement 'party' flag in cheat screen.

2004-03-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: 1.1.11cvs

2004-03-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.spec.in: new desktop/ file locations

2004-02-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: updated to 1.1.10rc2

2004-02-25  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.ac, mapedit/Makefile.am, mapedit/u7shp.c:
	  made gimp plugin compile in both gimp 1.2.x and gimp 1.3/2.0(pre)

2004-02-25  Ryan Nunn  <colourles@users.sourceforge.net>
	* msvcstuff/*.* : Replacing MSVC 6.0 projects with MSVC.Net projects
	* other files: Removing some MSVC hacks
	* Since MSVC 6.0 is no longer going to be supported, and MSVC.Net is 
	  more standards compliant, if you are writing standards compliant code
	  you shouldn't step on my toes anymore.

2004-02-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/custom_sword.shp: custom sword paperdoll art

2004-02-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: paint NPCs translucently to prevent palette-cycling
	* shapes/shapevga.cc: removed Spark-translucency hack

2004-02-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* desktop/*: put .desktop file in /usr/share/applications,
	icon in /usr/share/icons.

2004-02-19  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/studio.cc: fixed main_window not getting toplevel_focus

2004-02-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>